@@ -159,6 +159,10 @@ static void Show_Splash_Window(ApplicationWindowProperty& property, ImGuiContext
         ImGui::Render();
         FrameRendering(wd);
     }
+
+    if (property.application.Application_SplashFinalize)
+        property.application.Application_SplashFinalize(&property.handle);
+
     err = vkDeviceWaitIdle(g_Device);
     check_vk_result(err);
     ImGui_ImplVulkan_Shutdown();
